# cookiecutter-sigil-lib

./: .gitignore  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py
{{ cookiecutter.project_slug }}/tests/: test_basic.py
